# ethereum-keys-sgx

./: .README.md.swp  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
app/: Cargo.toml  Enclave_u.c  build.rs
app/src/: main.rs
bin-working-sgx-ver/: encrypted_keypair-original
enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Enclave_t.c  Makefile  Xargo.toml
enclave/src/: constants.rs  destroy_key.rs  error.rs  generate_keypair.rs  get_public_key.rs  import_secret.rs  key_generator.rs  keygen.rs  lib.rs  mc.rs  monotonic_counter.rs  pse_session.rs  sealer.rs  sgx_time.rs  show_private_key.rs  signer.rs  tests.rs
sgx-time-test/: app
src/: constants.rs  destroy_keypair.rs  do_other_stuff.rs  dothing.rs  enclave_api.rs  error.rs  fs.rs  generate_keypair.rs  get_eth_address.rs  get_nonce.rs  get_priv_key.rs  get_private_key.rs  get_public_key.rs  import_secret.rs  init_enclave.rs  keccak.rs  lib.rs  send_transaction.rs  show_private_key.rs  sign_message.rs  sign_msg.rs  sign_transaction.rs  transaction.rs  types.rs  utils.rs  verify.rs
