[package]
name = "ethkey_sgx_app"
version = "0.1.0"
authors = ["gregkapka <greg@oraclize.it>"]

[dependencies]
rlp = "0.3.0"
hex = "0.3.2"
dirs = "1.0.2"
serde = "1.0.80"
reqwest = "0.9.3"
itertools = "0.7.8"
tiny-keccak = "1.4"
serde_json = "1.0.32"
serde_derive = "1.0.80"
ethereum-types = "0.4.0"
sgx_urts = { git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk" }
eth-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
