[package]
name = "app"
version = "1.0.0"
authors = ["Baidu"]
build = "build.rs"

[dependencies]
dirs = "1.0.2"
sgx_urts = { git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk" }
eth-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }
# rand = "0.4"
# # failure = "0.1.2"
tiny-keccak = "1.4"
# ethereum-types = "0.4.0"
