[package]
name = "ethkey_sgx" # Note: changes here need mirroring in Makefile
version = "0.1.0"
authors = ["gregkapka <greg@oraclize.it>"]
build = "build.rs"

[dependencies]
serde = "1.0"
docopt = "1.0.1"
itertools = "0.7.8"
serde_derive = "1.0.79"
ethereum-types = "0.4.0"
ethkey_sgx_app = { path = "../" }
