[package]
name = "ethkey_sgx_enclave"
version = "0.1.0"
authors = ["Greg Kapka <greg@oraclize.it>"]

[lib]
name = "ethkey_sgx_enclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_rand = { git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_tseal = { git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_tcrypto = { git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_tservice = { git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk", features = ["backtrace"] }
secp256k1-sgx = { git = "https://github.com/bl4ck5un/rust-secp256k1-sgx", features=["rand"] }
